--- a/O Rei do Cangaco/appmanifest.json
+++ b/O Rei do Cangaco/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "Fase1",
-	"short_name": "Fase1",
+	"name": "O Rei do Cangaço",
+	"short_name": "O Rei do Cangaço",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
